[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/CameraRig.tscn" type="PackedScene" id=1]
[ext_resource path="res://textures/terrain/material/mat_terrain_water_grid.tres" type="Material" id=2]
[ext_resource path="res://scenes/SceneDefaultEnvironment.tres" type="Environment" id=3]
[ext_resource path="res://tests/AttackModelTest.gd" type="Script" id=4]
[ext_resource path="res://tests/test_assets/KinematicPawn.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 20, 1, 20 )

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 40, 40 )

[sub_resource type="NavigationMesh" id=3]
vertices = PoolVector3Array( -19.5, 0.5, -19.5, -19.5, 0.5, 19.5, 19.5, 0.5, 19.5, 19.5, 0.5, -19.5 )
polygons = [ PoolIntArray( 3, 2, 0 ), PoolIntArray( 0, 2, 1 ) ]
geometry/parsed_geometry_type = 1
geometry/collision_mask = 4293918723
geometry/source_geometry_mode = 1
geometry/source_group_name = "terrain"
cell/size = 0.1
cell/height = 0.25
agent/height = 0.81
agent/radius = 0.5
agent/max_climb = 0.5
edge/max_length = 0.0

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.984314, 1, 0.52549, 1 )

[node name="AttackModelTest" type="Spatial"]
script = ExtResource( 4 )

[node name="CameraRig" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 64, 64, 64 )
basic_move_rate = 50.0
camera_size = 18
max_camera_size = 20
min_camera_size = 12
zoom_step = 2
move_enabled = true
zoom_enabled = true
move_clamping_extents = Vector2( 15, 15 )

[node name="CoreCamera" parent="CameraRig" index="2"]
size = 18.0

[node name="Camera" parent="CameraRig/XrayWorld" index="0"]
transform = Transform( 0.707107, -0.408244, 0.577353, 0, 0.816501, 0.577344, -0.707107, -0.408244, 0.577353, 64, 64, 64 )
size = 18.0

[node name="Camera" parent="CameraRig/SilhouetteWorld" index="0"]
transform = Transform( 0.707107, -0.408244, 0.577353, 0, 0.816501, 0.577344, -0.707107, -0.408244, 0.577353, 64, 64, 64 )
size = 18.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="Floor" type="StaticBody" parent="." groups=[
"terrain",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
navmesh = SubResource( 3 )

[node name="CSGTorus" type="CSGTorus" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
inner_radius = 1.9
outer_radius = 2.1
sides = 35
ring_sides = 3
material = SubResource( 4 )

[node name="ControlGUI" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 138.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadiusLabel" type="Label" parent="ControlGUI"]
margin_right = 160.0
margin_bottom = 14.0
text = "Test Radius"
align = 1

[node name="RadiusSlider" type="HSlider" parent="ControlGUI"]
margin_top = 18.0
margin_right = 160.0
margin_bottom = 34.0
rect_min_size = Vector2( 160, 0 )
min_value = 2.0
max_value = 18.0
step = 0.25
value = 2.0

[node name="Spacer" type="ReferenceRect" parent="ControlGUI"]
margin_top = 38.0
margin_right = 160.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 10 )

[node name="BehaviorLabel" type="Label" parent="ControlGUI"]
margin_top = 52.0
margin_right = 160.0
margin_bottom = 66.0
text = "Target Behavior"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BehaviorOptions" type="OptionButton" parent="ControlGUI"]
margin_top = 70.0
margin_right = 160.0
margin_bottom = 90.0
text = "Outside Radius"
align = 1
items = [ "Outside Radius", null, false, 0, null, "Radial Dipping", null, false, 1, null, "Inside Radius", null, false, 2, null ]
selected = 0

[node name="AttackPawn" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )

[node name="TargetPawn" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.3, 0 )
navigation = NodePath("../Navigation")
[connection signal="value_changed" from="ControlGUI/RadiusSlider" to="." method="_on_RadiusSlider_value_changed"]
[connection signal="path_complete" from="TargetPawn" to="." method="_on_TargetPawn_path_complete"]

[editable path="CameraRig"]
